# vkr-tiler

./: .dockerignore  .env  .gitignore  Dockerfile  activate_env.sh  docker-compose.yml  environment.yml  main.py  noxfile.py  pyproject.toml  requirements.txt  worker.py
config/: __init__.py
scripts/: exec_service.sh
tiler/: settings.py  utils.py
tiler/config/: __init__.py
